llvm/test/aqs-2.llvm
; ModuleID = 'QuickSort'

@list = global [100 x i32] zeroinitializer

define void @main() {
entry:
  ret i32 0
}
